# cosmian_fpe

./: CHANGELOG.md  Cargo.toml  pyproject.toml
python/: requirements.txt
python/fpe/: __init__.py  __init__.pyi
python/scripts/: test.sh  test_fpe.py
src/: ff1.rs  lib.rs
src/ff1/: alloc.rs  error.rs  ff1_18.rs  test_vectors.rs
src/interfaces/: mod.rs
src/interfaces/pyo3/: mod.rs  py_ff1.rs
